Temporary solution for pending PR being merged

--- a/vm/qubes-psu-client.service
+++ b/vm/qubes-psu-client.service
@@ -2,6 +2,7 @@
 Description=Dummy power supply client service
 ConditionPathExists=/var/run/qubes-service/dummy-psu
 Requires=module-load-dummy-psu.service
+After=qubes-qrexec-agent.service
 
 [Service]
 ExecStart=/usr/bin/qubes-psu-client
