--- a/dummy-psu.spec.in
+++ b/dummy-psu.spec.in
@@ -93,12 +93,14 @@ dkms remove -m %{module} -v %{version} --all --rpm_safe_upgrade
 
 
 %post vm
-%systemd_post dummy-psu.service
+%systemd_post qubes-psu-client.service
 %systemd_post module-load-dummy-psu.service
+systemctl enable module-load-dummy-psu.service
+systemctl enable qubes-psu-client.service
 
 
 %preun vm
-%systemd_postun dummy-psu.service
+%systemd_postun qubes-psu-client.service
 %systemd_postun module-load-dummy-psu.service
 
 
