--- a/dummy-psu.spec.in
+++ b/dummy-psu.spec.in
@@ -22,21 +22,21 @@ Requires: dkms
 %{summary}.
 
 
-%package dom0
-Summary: Dummy power supply dom0 part
+%package sender
+Summary: Dummy power supply sender part
 
 
-%description dom0
+%description sender
 %{summary}.
 
 
-%package vm
-Summary: Dummy power supply VM part
+%package receiver
+Summary: Dummy power supply receiver part
 BuildRequires: json-c-devel
 Requires: dummy-psu-module
 
 
-%description vm
+%description receiver
 %{summary}.
 
 
@@ -62,12 +62,12 @@ make client
 /usr/src/%{module}-%{version}/power_supply.h
 
 
-%files dom0
+%files sender
 %defattr(-,root,root)
 %{_sysconfdir}/qubes-rpc/qubes.PowerSupply
 
 
-%files vm
+%files receiver
 %defattr(-,root,root)
 /etc/qubes/post-install.d/20-dummy-psu.sh
 /usr/bin/qubes-psu-client
@@ -91,12 +91,12 @@ fi
 dkms remove -m %{module} -v %{version} --all --rpm_safe_upgrade
 
 
-%post vm
+%post receiver
 %systemd_post qubes-psu-client.service
 %systemd_post module-load-dummy-psu.service
 
 
-%preun vm
+%preun receiver
 %systemd_postun qubes-psu-client.service
 %systemd_postun module-load-dummy-psu.service
 
