Allow to receive from multiple backend

--- a/receiver/module-load-dummy-psu.service
+++ b/receiver/module-load-dummy-psu.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dummy psu module loader service
-ConditionPathExists=/var/run/qubes-service/dummy-psu
+ConditionPathExistsGlob=/var/run/qubes-service/dummy-psu@*
 
 [Service]
 Type=oneshot
