--- a/dummy-psu.spec.in
+++ b/dummy-psu.spec.in
@@ -23,6 +23,7 @@ Requires: dkms
 
 
 %package sender
+Requires: python%{python3_pkgversion}-pyudev
 Summary: Dummy power supply sender part
 
 
@@ -71,7 +72,7 @@ make client
 %defattr(-,root,root)
 /etc/qubes/post-install.d/20-dummy-psu.sh
 /usr/bin/qubes-psu-client
-/usr/lib/systemd/system/qubes-psu-client.service
+/usr/lib/systemd/system/qubes-psu-client@.service
 /usr/lib/systemd/system/module-load-dummy-psu.service
 
 
@@ -92,12 +93,12 @@ dkms remove -m %{module} -v %{version} --all --rpm_safe_upgrade
 
 
 %post receiver
-%systemd_post qubes-psu-client.service
+%systemd_post qubes-psu-client@.service
 %systemd_post module-load-dummy-psu.service
 
 
 %preun receiver
-%systemd_postun qubes-psu-client.service
+%systemd_postun qubes-psu-client@.service
 %systemd_postun module-load-dummy-psu.service
 
 
