--- a/dummy-psu.spec.in
+++ b/dummy-psu.spec.in
@@ -8,6 +8,7 @@ Summary: Dummy power supply
 License: GPLv2+
 Source0: %{name}-%{version}.tar.gz
 
+BuildRequires: make
 BuildRequires: gcc
 
 %description
